# neurokit2-stubs

./: AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  repo.sh  tox.ini
docs/: api.md  installation.md  usage.md
neurokit2-stubs/: __init__.pyi
neurokit2-stubs/ecg/: __init__.pyi  ecg_clean.pyi  ecg_peaks.pyi  ecg_process.pyi  ecg_simulate.pyi
neurokit2-stubs/eda/: __init__.pyi  eda_analyze.py  eda_process.py  eda_simulate.py
neurokit2-stubs/hrv/: __init__.pyi  hrv.pyi  hrv_frequency.py  hrv_nonlinear.py  hrv_time.py  intervals_process.pyi
neurokit2-stubs/misc/: __init__.pyi  random.pyi
neurokit2-stubs/rsp/: __init__.pyi  rsp_analyze.pyi  rsp_simulate.pyi
neurokit2-stubs/signal/: __init__.pyi  signal_distort.pyi  signal_interpolate.pyi  signal_power.pyi  signal_resample.pyi  signal_simulate.pyi
neurokit2_stubs/: __init__.py  __init__.pyi
neurokit2_stubs/rsp/: __init__.pyi  rsp_analyze.pyi  rsp_process.pyi  rsp_simulate.pyi
tests/: __init__.py  test_app.py
